# crewai-chat-tui

./: .gitignore  LICENSE  README.md  agent.py  config.py  config.yaml  knowledge.py  log.py  main.py  pyproject.toml
knowledge/: about_this_system.md  team_conventions.txt
tools/: __init__.py  system_info.py
tui/: __init__.py  app.py
tui/utils/: css.py  dialogs.py  widgets.py
